--- a/app/templates/newsletters/index.hbs
+++ b/app/templates/newsletters/index.hbs
@@ -2,97 +2,97 @@
   <div class="auk-u-maximize-height auk-scroll-wrapper">
     <div class="auk-scroll-wrapper__body">
       <div class="auk-u-m-8">
-        <DataTable
-          data-test-route-newsletters-data-table={{true}}
+        <KDataTable
+          data-test-route-newsletters-data-table
+          @hoverable={{true}}
+          @striped={{true}}
+          @loading={{this.isLoadingModel}}
           @content={{@model}}
-          @class="auk-table auk-table--striped"
           @page={{this.page}}
           @size={{this.size}}
-          @sort={{this.sort}}
-          @enableSizes={{true}}
-          @isLoading={{this.isLoadingModel}}
-          @noDataMessage={{t "no-results-found"}}
+          @numberOfItems={{@model.length}}
+          @totalNumberOfItems={{@model.meta.count}}
+          @onChangeSize={{fn (mut this.size)}}
+          @onChangePage={{fn (mut this.page)}}
           @onClickRow={{this.navigateToNewsletter}}
-          as |table|
         >
-          <table.content as |c|>
-            <c.header>
-              <ThSortable
-                @class="auk-table__col--5"
-                @currentSorting={{this.sort}}
-                @field="planned-start,number-representation"
-                @label={{t "newsletter"}}
-              />
-              <th class="auk-table__col--3">
-                {{!TODO: should sort on field agendas but does not return all 10 results }}
-                {{concat (t "newsletter") " " (t "sent-at")}}
-              </th>
-              <th class="auk-table__col--3">
-                {{!TODO: should sort on latest modified agenda }}
-                {{t "latest-modified"}}
-              </th>
-              <th class="auk-table__col--1"></th>
-            </c.header>
-            <c.body @class="auk-table--clickable-rows" as |meeting|>
-              <td data-test-route-newsletters-data-table-row-title>
-                {{#if (is-pending meeting)}}
+          <:header>
+            <Utils::ThSortable
+              @class="auk-table__col--5"
+              @currentSorting={{this.sort}}
+              @field="planned-start,number-representation"
+              @label={{t "newsletter"}}
+              @onChange={{fn (mut this.sort)}}
+            />
+            <th class="auk-table__col--3">
+              {{!TODO: should sort on field agendas but does not return all 10 results }}
+              {{concat (t "newsletter") " " (t "sent-at")}}
+            </th>
+            <th class="auk-table__col--3">
+              {{!TODO: should sort on latest modified agenda }}
+              {{t "latest-modified"}}
+            </th>
+            <th class="auk-table__col--1"></th>
+          </:header>
+          <:body as |meeting|>
+            <td data-test-route-newsletters-data-table-row-title>
+              {{#if (is-pending meeting)}}
+                <div
+                  class="auk-skeleton auk-skeleton--rectangle"
+                  role="alert"
+                  aria-busy="true"
+                ></div>
+              {{else}}
+                {{t
+                  "newsletter-for-meeting-of"
+                  kind=(lowercase (kind-print-label meeting.kind))
+                }}
+                {{date meeting.plannedStart}}
+              {{/if}}
+            </td>
+            <td>
+              {{#if (is-pending meeting.mailCampaign)}}
+                <div
+                  class="auk-skeleton auk-skeleton--rectangle"
+                  role="alert"
+                  aria-busy="true"
+                ></div>
+              {{else if meeting.mailCampaign}}
+                {{#if meeting.mailCampaign.isSent}}
+                  {{datetime-at meeting.mailCampaign.sentAt}}
+                {{else}}
+                  {{t "not-sent-yet"}}
+                {{/if}}
+              {{else}}
+                {{t "not-yet-created"}}
+              {{/if}}
+            </td>
+            <td>
+              {{#let (this.latestAgenda meeting) as |latestAgenda|}}
+                {{#if (is-pending latestAgenda)}}
                   <div
                     class="auk-skeleton auk-skeleton--rectangle"
                     role="alert"
                     aria-busy="true"
                   ></div>
                 {{else}}
-                  {{t
-                    "newsletter-for-meeting-of"
-                    kind=(lowercase (kind-print-label meeting.kind))
-                  }}
-                  {{date meeting.plannedStart}}
+                  {{datetime (get (await latestAgenda) "modified")}}
                 {{/if}}
-              </td>
-              <td>
-                {{#if (is-pending meeting.mailCampaign)}}
-                  <div
-                    class="auk-skeleton auk-skeleton--rectangle"
-                    role="alert"
-                    aria-busy="true"
-                  ></div>
-                {{else if meeting.mailCampaign}}
-                  {{#if meeting.mailCampaign.isSent}}
-                    {{datetime-at meeting.mailCampaign.sentAt}}
-                  {{else}}
-                    {{t "not-sent-yet"}}
-                  {{/if}}
-                {{else}}
-                  {{t "not-yet-created"}}
-                {{/if}}
-              </td>
-              <td>
-                {{#let (this.latestAgenda meeting) as |latestAgenda|}}
-                  {{#if (is-pending latestAgenda)}}
-                    <div
-                      class="auk-skeleton auk-skeleton--rectangle"
-                      role="alert"
-                      aria-busy="true"
-                    ></div>
-                  {{else}}
-                    {{datetime (get (await latestAgenda) "modified")}}
-                  {{/if}}
-                {{/let}}
-              </td>
-              <td class="auk-u-text-align--center">
-                <AuLink
-                  @skin="button-naked"
-                  @icon="chevron-right"
-                  @hideText={{true}}
-                  @route="newsletter"
-                  @model={{meeting.id}}
-                >
-                  {{t "open"}}
-                </AuLink>
-              </td>
-            </c.body>
-          </table.content>
-        </DataTable>
+              {{/let}}
+            </td>
+            <td class="auk-u-text-align--center">
+              <AuLink
+                @skin="button-naked"
+                @icon="chevron-right"
+                @hideText={{true}}
+                @route="newsletter"
+                @model={{meeting.id}}
+              >
+                {{t "open"}}
+              </AuLink>
+            </td>
+          </:body>
+        </KDataTable>
       </div>
     </div>
   </div>
