--- a/app/templates/search/agenda-items.hbs
+++ b/app/templates/search/agenda-items.hbs
@@ -52,78 +52,79 @@
   <div class="auk-o-grid-col-10">
     <div>
       {{#if this.model.length}}
-        <DataTable
-          data-test-route-search-agendaitems-data-table={{true}}
+        <KDataTable
+          data-test-route-search-agendaitems-data-table
+          @hoverable={{true}}
+          @striped={{true}}
+          @loading={{this.isLoadingModel}}
           @content={{this.model}}
           @page={{this.page}}
-          @noDataMessage={{t "no-results-found"}}
           @size={{this.size}}
-          @sort={{this.sort}}
-          @class="auk-table auk-table--striped"
-          @isLoading={{this.isLoadingModel}}
+          @numberOfItems={{this.model.length}}
+          @totalNumberOfItems={{this.model.meta.count}}
+          @onChangeSize={{fn (mut this.size)}}
+          @onChangePage={{fn (mut this.page)}}
           @onClickRow={{this.navigateToAgendaitem}}
-        as |table|
         >
-          <table.content as |c|>
-            <c.header>
-              <th class="auk-table__col--7">
-                {{t "agendaitem-table-header"}}
-              </th>
-              <th class="auk-table__col--1">
-                {{t "agendaitem-type"}}
-              </th>
-              <th class="auk-table__col--1">
-                {{t "agenda-version"}}
-              </th>
-              <ThSortable
-                @class="auk-table__col--1"
-                @currentSorting={{this.sort}}
-                @field="sessionDates"
-                @label={{t "on-agenda-of"}}
-              />
-              <th class="auk-table__col--1"></th>
-            </c.header>
-            <c.body class="auk-table--clickable-rows" as |row|>
-              <td>
-                <p data-test-route-search-agendaitems-row-shorttitle>
-                  {{#if row.shortTitle}}
-                    {{row.shortTitle}}
-                  {{else}}
-                    {{row.title}}
-                  {{/if}}
-                </p>
-              </td>
-              <td>
-                {{#if (is-announcement row.type)}}
-                  {{capitalize (t "announcement")}}
+          <:header>
+            <th class="auk-table__col--7">
+              {{t "agendaitem-table-header"}}
+            </th>
+            <th class="auk-table__col--1">
+              {{t "agendaitem-type"}}
+            </th>
+            <th class="auk-table__col--1">
+              {{t "agenda-version"}}
+            </th>
+            <Utils::ThSortable
+              @class="auk-table__col--1"
+              @currentSorting={{this.sort}}
+              @field="sessionDates"
+              @label={{t "on-agenda-of"}}
+              @onChange={{fn (mut this.sort)}}
+            />
+            <th class="auk-table__col--1"></th>
+          </:header>
+          <:body as |row|>
+            <td>
+              <p data-test-route-search-agendaitems-row-shorttitle>
+                {{#if row.shortTitle}}
+                  {{row.shortTitle}}
                 {{else}}
-                  {{t "note"}}
+                  {{row.title}}
                 {{/if}}
-              </td>
-              <td>
-                {{#if (eq row.agendaSerialNumber.length 1)}}
-                  {{t "agenda"}} {{row.agendaSerialNumber}}
-                {{else}}
-                  {{t "agenda"}}
-                {{/if}}
-              </td>
-              <td>
-                {{date row.sessionDates}}
-              </td>
-              <td class="auk-u-text-align--right">
-                <AuLink
-                  @skin="button-naked"
-                  @icon="chevron-right"
-                  @hideText={{true}}
-                  @route="agenda.agendaitems.agendaitem"
-                  @models={{array row.meetingId row.agendaId row.id}}
-                >
-                  {{t "open"}}
-                </AuLink>
-              </td>
-            </c.body>
-          </table.content>
-        </DataTable>
+              </p>
+            </td>
+            <td>
+              {{#if (is-announcement row.type)}}
+                {{capitalize (t "announcement")}}
+              {{else}}
+                {{t "note"}}
+              {{/if}}
+            </td>
+            <td>
+              {{#if (eq row.agendaSerialNumber.length 1)}}
+                {{t "agenda"}} {{row.agendaSerialNumber}}
+              {{else}}
+                {{t "agenda"}}
+              {{/if}}
+            </td>
+            <td>
+              {{date row.sessionDates}}
+            </td>
+            <td class="auk-u-text-align--right">
+              <AuLink
+                @skin="button-naked"
+                @icon="chevron-right"
+                @hideText={{true}}
+                @route="agenda.agendaitems.agendaitem"
+                @models={{array row.meetingId row.agendaId row.id}}
+              >
+                {{t "open"}}
+              </AuLink>
+            </td>
+          </:body>
+        </KDataTable>
       {{else}}
         {{#if this.emptySearch}}
           <Auk::EmptyState
