--- a/app/components/utils/add-existing-piece.hbs
+++ b/app/components/utils/add-existing-piece.hbs
@@ -20,41 +20,42 @@
         <Auk::Loader @message={{t "loading"}} />
       </div>
     {{else}}
-      <DataTable
+      <KDataTable
+        @hoverable={{true}}
+        @loading={{this.findAll.isRunning}}
         @content={{this.pieces}}
-        @sort={{this.sort}}
         @page={{this.pageParam}}
         @size={{this.size}}
-        @noDataMessage={{t "no-results-found"}}
-        @isLoading={{this.findAll.isRunning}}
+        @numberOfItems={{this.pieces.length}}
+        @totalNumberOfItems={{this.pieces.meta.count}}
+        @onChangeSize={{fn (mut this.size)}}
+        @onChangePage={{fn (mut this.page)}}
         @onClickRow={{this.select}}
-      as |table|>
-        <table.content as |c|>
-          <c.header>
-            <th></th>
-            <th><span class="">{{t "title-document"}}</span></th>
-            <th><span class="">{{t "created-on"}}</span></th>
-          </c.header>
-          <c.body as |row|>
-            <td class="auk-table__col--1">
-              <AuControlCheckbox
-                data-test-add-existing-piece-checkbox={{true}}
-                @checked={{includes row this.selected}}
-              />
-            </td>
-            <td class="auk-table__col--8">
-              {{row.name}}
-            </td>
-            <td class="auk-table__col--3">
-              {{#if row.created}}
-                {{date-format row.created "EEEEEE dd-MM-yyyy HH:mm"}}
-              {{else}}
-                {{t "dash"}}
-              {{/if}}
-            </td>
-          </c.body>
-        </table.content>
-      </DataTable>
+      >
+        <:header>
+          <th></th>
+          <th><span class="">{{t "title-document"}}</span></th>
+          <th><span class="">{{t "created-on"}}</span></th>
+        </:header>
+        <:body as |row|>
+          <td class="auk-table__col--1">
+            <AuControlCheckbox
+              data-test-add-existing-piece-checkbox={{true}}
+              @checked={{includes row this.selected}}
+            />
+          </td>
+          <td class="auk-table__col--8">
+            {{row.name}}
+          </td>
+          <td class="auk-table__col--3">
+            {{#if row.created}}
+              {{date-format row.created "EEEEEE dd-MM-yyyy HH:mm"}}
+            {{else}}
+              {{t "dash"}}
+            {{/if}}
+          </td>
+        </:body>
+      </KDataTable>
     {{/if}}
   </div>
 </div>
